update github id

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://<YOUR_GITHUB_ID>.github.io",
-  "name": "react-contentful-github-pages",
+  "homepage": "https://whitneycambarijan.github.io",
+  "name": "whitneycambarijan.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
